{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 76,
  "lineage": "5117cf9a-1ae8-86f6-7e61-e21c1bffb0c9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terra_eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa78f7e507db4936",
            "domain": "vpc",
            "id": "eipalloc-0fa78f7e507db4936",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-205-153-111.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.153.111",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.terra_ig",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terra_eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-038dbb61f84be9e70",
            "domain": "vpc",
            "id": "eipalloc-038dbb61f84be9e70",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-6-58-16.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.58.16",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.terra_ig",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terra_eip_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001652699c161d685",
            "domain": "vpc",
            "id": "eipalloc-001652699c161d685",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-111-73-172.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.73.172",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.terra_ig",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:121900586140:internet-gateway/igw-015e2c7e014ed8036",
            "id": "igw-015e2c7e014ed8036",
            "owner_id": "121900586140",
            "tags": {
              "Name": "terra_ig"
            },
            "tags_all": {
              "Name": "terra_ig"
            },
            "vpc_id": "vpc-0266c48c4bb303955"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terra_nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa78f7e507db4936",
            "connectivity_type": "public",
            "id": "nat-093a9dd05e8df0a7c",
            "network_interface_id": "eni-0420ad62b4ec56be1",
            "private_ip": "10.0.1.12",
            "public_ip": "43.205.153.111",
            "subnet_id": "subnet-0759fc790fa7a09bc",
            "tags": {
              "Name": "terra_nat_1"
            },
            "tags_all": {
              "Name": "terra_nat_1"
            }
          },
          "dependencies": [
            "aws_eip.terra_eip_1",
            "aws_internet_gateway.terra_ig",
            "aws_subnet.terra_prvsub_1",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terra_nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-038dbb61f84be9e70",
            "connectivity_type": "public",
            "id": "nat-0361015d4e18fecf2",
            "network_interface_id": "eni-0c9c6e060ee3f16b0",
            "private_ip": "10.0.1.125",
            "public_ip": "3.6.58.16",
            "subnet_id": "subnet-0352044523aabc482",
            "tags": {
              "Name": "terra_nat_2"
            },
            "tags_all": {
              "Name": "terra_nat_2"
            }
          },
          "dependencies": [
            "aws_eip.terra_eip_2",
            "aws_internet_gateway.terra_ig",
            "aws_subnet.terra_prvsub_2",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terra_nat_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001652699c161d685",
            "connectivity_type": "public",
            "id": "nat-0ae8266cc8469edae",
            "network_interface_id": "eni-08b9b5d0d459d98c4",
            "private_ip": "10.0.1.162",
            "public_ip": "3.111.73.172",
            "subnet_id": "subnet-0efdbb2ff8252df81",
            "tags": {
              "Name": "terra_nat_3"
            },
            "tags_all": {
              "Name": "terra_nat_3"
            }
          },
          "dependencies": [
            "aws_eip.terra_eip_3",
            "aws_internet_gateway.terra_ig",
            "aws_subnet.terra_prvsub_3",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a1e332f6c81f4ebb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-093a9dd05e8df0a7c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a1e332f6c81f4ebb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.terra_eip_1",
            "aws_internet_gateway.terra_ig",
            "aws_nat_gateway.terra_nat_1",
            "aws_route_table.prv_rT",
            "aws_subnet.terra_prvsub_1",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-015e2c7e014ed8036",
            "id": "r-rtb-0963d641911a5c09c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0963d641911a5c09c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terra_ig",
            "aws_route_table.pub_rT",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv_rT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:121900586140:route-table/rtb-0a1e332f6c81f4ebb",
            "id": "rtb-0a1e332f6c81f4ebb",
            "owner_id": "121900586140",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terra_rT",
              "Public": "private"
            },
            "tags_all": {
              "Name": "terra_rT",
              "Public": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0266c48c4bb303955"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:121900586140:route-table/rtb-0963d641911a5c09c",
            "id": "rtb-0963d641911a5c09c",
            "owner_id": "121900586140",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terra_rT",
              "Role": "public"
            },
            "tags_all": {
              "Name": "terra_rT",
              "Role": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0266c48c4bb303955"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prv_associate_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089a0a94240d25d14",
            "route_table_id": "rtb-0a1e332f6c81f4ebb",
            "subnet_id": "subnet-0759fc790fa7a09bc"
          },
          "dependencies": [
            "aws_route_table.prv_rT",
            "aws_subnet.terra_prvsub_1",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prv_associate_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb4ba9a2699963a4",
            "route_table_id": "rtb-0a1e332f6c81f4ebb",
            "subnet_id": "subnet-0352044523aabc482"
          },
          "dependencies": [
            "aws_route_table.prv_rT",
            "aws_subnet.terra_prvsub_2",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prv_associate_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3134100d26754c3",
            "route_table_id": "rtb-0a1e332f6c81f4ebb",
            "subnet_id": "subnet-0efdbb2ff8252df81"
          },
          "dependencies": [
            "aws_route_table.prv_rT",
            "aws_subnet.terra_prvsub_3",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_associate_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a717e8df4c59cbf7",
            "route_table_id": "rtb-0963d641911a5c09c",
            "subnet_id": "subnet-08ce792f35a96d0c7"
          },
          "dependencies": [
            "aws_route_table.pub_rT",
            "aws_subnet.terra_pubsub_1",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_associate_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6b6fd84cd16bcc3",
            "route_table_id": "rtb-0963d641911a5c09c",
            "subnet_id": "subnet-0e731ad0d808f208e"
          },
          "dependencies": [
            "aws_route_table.pub_rT",
            "aws_subnet.terra_pubsub_2",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_associate_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0701a9388f0b22d89",
            "route_table_id": "rtb-0963d641911a5c09c",
            "subnet_id": "subnet-00052170edaa1c1dd"
          },
          "dependencies": [
            "aws_route_table.pub_rT",
            "aws_subnet.terra_pubsub_3",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_prvsub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:121900586140:subnet/subnet-0759fc790fa7a09bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0759fc790fa7a09bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "121900586140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_subent_1"
            },
            "tags_all": {
              "Name": "Private_subent_1"
            },
            "vpc_id": "vpc-0266c48c4bb303955"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_prvsub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:121900586140:subnet/subnet-0352044523aabc482",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0352044523aabc482",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "121900586140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_subent_2"
            },
            "tags_all": {
              "Name": "Private_subent_2"
            },
            "vpc_id": "vpc-0266c48c4bb303955"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_prvsub_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:121900586140:subnet/subnet-0efdbb2ff8252df81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.1.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efdbb2ff8252df81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "121900586140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_subent_3"
            },
            "tags_all": {
              "Name": "Private_subent_3"
            },
            "vpc_id": "vpc-0266c48c4bb303955"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_pubsub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:121900586140:subnet/subnet-08ce792f35a96d0c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ce792f35a96d0c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "121900586140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_subent_1"
            },
            "tags_all": {
              "Name": "Public_subent_1"
            },
            "vpc_id": "vpc-0266c48c4bb303955"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_pubsub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:121900586140:subnet/subnet-0e731ad0d808f208e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e731ad0d808f208e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "121900586140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_subent_2"
            },
            "tags_all": {
              "Name": "Public_subent_2"
            },
            "vpc_id": "vpc-0266c48c4bb303955"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_pubsub_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:121900586140:subnet/subnet-00052170edaa1c1dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00052170edaa1c1dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "121900586140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_subent_3"
            },
            "tags_all": {
              "Name": "Public_subent_3"
            },
            "vpc_id": "vpc-0266c48c4bb303955"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:121900586140:vpc/vpc-0266c48c4bb303955",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b6c02bd5a031c1c6",
            "default_route_table_id": "rtb-04bc277fe59e86da0",
            "default_security_group_id": "sg-0c04936ec605c1ef7",
            "dhcp_options_id": "dopt-0ea907086d60e98ef",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0266c48c4bb303955",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04bc277fe59e86da0",
            "owner_id": "121900586140",
            "tags": {
              "Name": "terra_vpc"
            },
            "tags_all": {
              "Name": "terra_vpc"
            }
          }
        }
      ]
    }
  ]
}